# srep

./: Makefile.am  README  Tuprules.tup  configure.ac  groups  guix.scm  pre-inst-env.in  project.config
doc/: srep.texi
scripts/: srep.in
src/srep/: ui.scm
src/srep/cmd/: srep.scm
src/srep/ui/: s.scm
srep/: ui.scm
variants/: native-o0.config  native-o3.config
